fix spacing from yt videpos in groups

--- a/assets/sass/components/_section.scss
+++ b/assets/sass/components/_section.scss
@@ -76,6 +76,10 @@ section {
   }
 }
 
+.group-video {
+  margin-top: 50px;
+}
+
 .stream-teaser-image {
   max-height: 540px;
   width: 100%;
